# micmac-clap-rs

./: Cargo.toml  build.rs
src/: main.rs  mm3d-cli.yml
